fix: solve the issue with horizontal scroll appearing;

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,6 @@ section {
   color: #fff;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -146,7 +145,7 @@ section {
 
 @media screen and (min-width: 756px) {
   #footer {
-    padding: 25px !important;
+    padding: 25px 0 25px 0 !important;
   }
 }
 
